src/test/resources/valid/FourtyTwo.java
class FourtyTwo {
    public static void main(String[] args) {
        System.out.println(42);
    }
}
